--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -3,6 +3,6 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent" android:orientation="vertical">
-
-    <GridView android:id="@+id/gridList" android:numColumns="auto_fit" android:columnWidth="150px" android:layout_width="fill_parent" android:layout_height="fill_parent"></GridView>
+    <ListView android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/listView" android:padding="10px"></ListView>
+    <GridView android:id="@+id/gridList" android:numColumns="auto_fit" android:columnWidth="150px" android:layout_width="fill_parent" android:layout_height="fill_parent" android:visibility="invisible"></GridView>
 </LinearLayout>
