--- a/res/layout/detail.xml
+++ b/res/layout/detail.xml
@@ -5,22 +5,7 @@
 	android:layout_height="fill_parent"
 	android:orientation="vertical"
 >
-	<FrameLayout android:id="@+id/frameLayout1" android:layout_width="fill_parent" android:layout_height="80px" android:background="@drawable/ad_area">
-		<com.cauly.android.ad.AdView xmlns:app="http://schemas.android.com/apk/res/kr.comnic.MyoungPum"
-			android:id="@+id/ad" 
-	        android:layout_width="fill_parent" 
-	        android:layout_alignParentBottom="true"
-	        android:layout_weight="0"
-	        app:appcode="wCrQXfwGKF"	
-	        app:adtype="cpc"
-	        app:gender="all"
-	        app:age="all"
-	        app:gps="off"
-	        app:effect="half"
-	        app:allowcall="yes"	
-	        app:reloadInterval="30" android:layout_height="fill_parent">
-		</com.cauly.android.ad.AdView>
-	</FrameLayout>
+	<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/ad_area" android:id="@+id/ADLayout2"></RelativeLayout>
 
 	<android.webkit.WebView
 		android:layout_width="fill_parent"
