--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -3,6 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent" android:orientation="vertical">
+    <RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ADLayout1" android:background="@drawable/ad_area"></RelativeLayout>
     <ListView android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/listView" android:padding="10px"></ListView>
     <GridView android:id="@+id/gridList" android:numColumns="auto_fit" android:columnWidth="150px" android:layout_width="fill_parent" android:layout_height="fill_parent" android:visibility="invisible"></GridView>
 </LinearLayout>
